--- a/DeployingWebsites101Dojo/Views/Home/Index.cshtml
+++ b/DeployingWebsites101Dojo/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using DeployingWebsites101Dojo.Extensions
+@{
     ViewBag.Title = "Deploying Websites 101 Dojo";
 }
 
@@ -17,13 +18,19 @@
         <div class="form-group">
             <label class="control-label col-sm-4">Local IP</label>
             <div class="col-sm-8">
-                <p class="form-control-static"></p>
+                <p class="form-control-static">@Html.GetLocalIPAddress()</p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-sm-4">Server Location</label>
+            <div class="col-sm-8">
+                <p class="form-control-static">@Server.MapPath("~")</p>
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-sm-4">Client IP</label>
             <div class="col-sm-8">
-                <p class="form-control-static"></p>
+                <p class="form-control-static">@Html.ViewContext.RequestContext.HttpContext.Request.UserHostAddress</p>
             </div>
         </div>
         <div class="form-group">
